--- a/src/index.css
+++ b/src/index.css
@@ -8,17 +8,7 @@ html {
   box-sizing: inherit;
 }
 
-.body {
+body {
   background-color: #ddd;
   font-family: "Lato", sans-serif;
-}
-
-.main {
-  margin: 0 auto;
-  padding: 20px;
-  max-width: 800px;
-}
-
-.header {
-  margin: 10px;
 }
